kubernetes/infrastructure/kong/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-api-login-ingress
  namespace: eshop-microservices
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: "kong"
    konghq.com/plugins: "rate-limiting,auth-path-transformer-login"
spec:
  rules:
  - http:
      paths:
      - path: /auth-service/api/Auth/login
        pathType: Exact
        backend:
          service:
            name: auth-api
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-api-register-ingress
  namespace: eshop-microservices
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: "kong"
    konghq.com/plugins: "rate-limiting,auth-path-transformer-register"
spec:
  rules:
  - http:
      paths:
      - path: /auth-service/api/Auth/register
        pathType: Exact
        backend:
          service:
            name: auth-api
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-api-ingress
  namespace: eshop-microservices
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: "kong"
    konghq.com/plugins: "rate-limiting,jwt-auth"
spec:
  rules:
  - http:
      paths:
      - path: /auth-service
        pathType: Prefix
        backend:
          service:
            name: auth-api
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalog-api-ingress
  namespace: eshop-microservices
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: "kong"
    konghq.com/plugins: "rate-limiting,jwt-auth"
spec:
  rules:
  - http:
      paths:
      - path: /catalog-service
        pathType: Prefix
        backend:
          service:
            name: catalog-api
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basket-api-ingress
  namespace: eshop-microservices
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: "kong"
    konghq.com/plugins: "rate-limiting,jwt-auth"
spec:
  rules:
  - http:
      paths:
      - path: /basket-service
        pathType: Prefix
        backend:
          service:
            name: basket-api
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ordering-api-ingress
  namespace: eshop-microservices
  annotations:
    konghq.com/strip-path: "true"
    kubernetes.io/ingress.class: "kong"
    konghq.com/plugins: "rate-limiting,jwt-auth"
spec:
  rules:
  - http:
      paths:
      - path: /ordering-service
        pathType: Prefix
        backend:
          service:
            name: ordering-api
            port:
              number: 80
